src/assets/style/preferences.css
.pref-text {
  display: none;
}

.pref-title2 {
  display: none;
}

/*Form*/
#form-pref .form-container {
  position: relative;
  display: grid;
  grid-template-rows: repeat(4, auto);
  grid-template-columns: auto auto;
  grid-row-gap: 10px;
  grid-column-gap: 8px;
  max-width: 300px;
  margin: 0 auto;
}

#form-pref .check-box {
  position: relative;
  justify-self: center;
  display: grid;
  grid-template-columns: auto 1fr;
  grid-template-rows: auto;
  width: 136px;
  height: auto;
  border: 1.5px solid var(--lightGrey);
  border-radius: var(--mainBorderRadius);
  box-shadow: var(--darkShadow);
  padding: 6px 0 6px 6px;
  font-weight: 500;
  font-size: 14px;
  color: var(--naturalBlack);
  line-height: 20px;
  letter-spacing: var(--mainSpacing);
  transition: var(--mainTransition);
}

#form-pref .check-box label {
  display: inline;
}

#form-pref .check-box input {
  margin: 2px 5px 0 0;
  align-self: start;
}

#form-pref .check-box.selected {
  background-color: var(--primaryLightColor);
  border: 1.5px solid var(--primaryColor);
  font-family: var(--poppin);
  font-size: 14px;
  color: var(--primaryColor);
}
/*Form end*/

/*XS - smartphones landscape*/
@media all and (min-width: 640px) {
  .pref-text {
    display: block;
  }
  .pref-title2 {
    display: block;
  }
  #form-pref .form-container {
    grid-template-rows: auto auto;
    grid-template-columns: repeat(4, auto);
    grid-gap: 20px 20px;
    margin: initial;
    max-width: none;
  }
  #form-pref .check-box {
    justify-self: start;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: flex-start;
    width: 130px;
    height: 148px;
  }
  #form-pref .check-box:hover {
    border: solid 1px var(--primaryColor);
    transform: scale(1.03);
  }
}

/*MD – large tablet port. and medium tablet land.*/
@media all and (min-width: 992px) and (min-height: 800px) and (orientation: portrait) and (orientation: portrait) {
  #form-pref .form-container {
    grid-template-rows: auto auto auto;
    grid-template-columns: repeat(3, auto);
    grid-gap: 20px 20px;
  }
}

/*LG*/
@media all and (min-width: 1200px) {
  #form-pref .form-container {
    grid-template-rows: auto auto;
    grid-template-columns: repeat(4, auto);
    grid-gap: 20px 20px;
    margin: initial;
  }
  #form-pref .check-box {
    width: 136px;
  }
}

